# egispawner

./: README.md  setup.cfg  tox.ini
egispawner/: spawner.py
