[metadata]
name = egispawner
summary = JupyterHub Spawner for EGI Notebooks 
description-file = 
	README.md
author = Enol Fernández 
author-email = enol.fernandez@egi.eu
home-page = 
classifier = 
	Intended Audience :: Information Technology
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
	egispawner

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

